# power-mgr

./: CMakeLists.txt
src/: CMakeLists.txt  DS18B20.cpp  DS18B20.hpp  SerialHandler.cpp  SerialHandler.hpp  SolarHeater.cpp  SolarHeater.hpp  power-meter-data.h  power-meter.cpp  power-meter.hpp  power-mgr.cpp
src/IR/: LIRCException.hpp  heat-pump.cpp  heat-pump.hpp  ir-encode.cpp  ir-encode.hpp  ir.cpp  ir.hpp
